--- a/index.html
+++ b/index.html
@@ -89,10 +89,9 @@
 
     <section class="w-full bg-white flex flex-col md:flex-row min-h-screen">
         <!-- Columna Izquierda: Imagen y Texto -->
-        <div class="w-full md:w-1/2 relative bg-cover bg-center px-12 md:px-24 bg-[url('./assets/collection-bg.webp')]">
-            <div class="absolute inset-0 bg-black/20"></div>
-            <div
-                class="relative z-10 h-full flex flex-col justify-center items-center text-center py-12 md:py-24 bg-black/10">
+        <div
+            class="w-full md:w-1/2 relative bg-cover bg-center px-12 md:px-24 bg-[url('./assets/collection-bg.webp')] bg-black/20">
+            <div class="relative z-10 h-full flex flex-col justify-center items-center text-center py-12 md:py-24">
                 <h2 class="text-white text-4xl md:text-6xl font-bodoni mb-12 leading-tight">
                     Una colección<br>
                     creada para<br>
@@ -163,6 +162,47 @@
                 <p class="font-montserrat font-medium text-[#a24e4e] text-2xl">incluye un estuche de maquillaje de
                     regalo
                 </p>
+            </div>
+
+        </div>
+    </section>
+
+    <section class="w-full bg-[#e2d5d5] py-24 px-8">
+        <h2 class="text-[#a24e4e] text-5xl md:text-7xl font-bodoni text-center mb-16">Las protagonistas</h2>
+
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-8 w-[95%] mx-auto">
+
+            <!-- Protagonista 1 -->
+            <div
+                class="relative w-full aspect-square border border-[#a24e4e] bg-cover bg-center bg-[url('./assets/protagonista-1.webp')]">
+                <div class="absolute inset-0 bg-white/30"></div>
+                <div class="relative z-10 w-full h-full flex flex-col justify-center items-center text-center p-8">
+                    <p class="text-[#a24e4e] text-2xl md:text-3xl font-montserrat mb-auto mt-auto">Ser madre me hizo
+                        másfuerte</p>
+                    <span class="text-[#a24e4e] text-xl font-bold font-montserrat">Valeria</span>
+                </div>
+            </div>
+
+            <!-- Protagonista 2 -->
+            <div
+                class="relative w-full aspect-square border border-[#a24e4e] bg-cover bg-center bg-[url('./assets/protagonista-2.webp')]">
+                <div class="absolute inset-0 bg-white/30"></div>
+                <div class="relative z-10 w-full h-full flex flex-col justify-center items-center text-center p-8">
+                    <p class="text-[#a24e4e] text-2xl md:text-3xl font-montserrat mb-auto mt-auto">La belleza no está en
+                        cambiar, sino en aceptarte</p>
+                    <span class="text-[#a24e4e] text-xl font-bold font-montserrat">Camila</span>
+                </div>
+            </div>
+
+            <!-- Protagonista 3 -->
+            <div
+                class="relative w-full aspect-square border border-[#a24e4e] bg-cover bg-center bg-[url('./assets/protagonista-3.webp')]">
+                <div class="absolute inset-0 bg-white/30"></div>
+                <div class="relative z-10 w-full h-full flex flex-col justify-center items-center text-center p-8">
+                    <p class="text-[#a24e4e] text-2xl md:text-3xl font-montserrat mb-auto mt-auto">El éxito se ve
+                        diferente para cada una</p>
+                    <span class="text-[#a24e4e] text-xl font-bold font-montserrat">Luz</span>
+                </div>
             </div>
 
         </div>
