arreglar tamaño foto footer

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
             historia</h2>
 
         <div
-            class="w-[80%] mx-auto aspect-square md:aspect-[21/9] relative bg-cover bg-center bg-[url('./assets/footer.webp')]">
+            class="w-[95%] md:w-[80%] mx-auto aspect-square md:aspect-[21/9] relative bg-cover bg-center bg-[url('./assets/footer.webp')]">
             <div class="absolute inset-0 flex justify-center items-center">
                 <button
                     class="bg-transparent border-2 border-white text-white py-3 px-8 text-lg md:text-xl font-montserrat font-light hover:bg-white hover:text-black hover:scale-105 active:scale-95 active:bg-white active:text-black transition duration-300 uppercase">
