arreglar mayusculas y espacio

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                         </g>
                     </svg>
                 </div>
-                <p class="font-montserrat font-medium text-[#a24e4e] text-2xl">larga duración para tu ritmo diario</p>
+                <p class="font-montserrat font-medium text-[#a24e4e] text-2xl">Larga duración para tu ritmo diario</p>
             </div>
 
             <!-- Beneficio 2 -->
@@ -142,7 +142,7 @@
                         </g>
                     </svg>
                 </div>
-                <p class="font-montserrat font-medium text-[#a24e4e] text-2xl">textura ligera que realza tu color
+                <p class="font-montserrat font-medium text-[#a24e4e] text-2xl">Textura ligera que realza tu color
                     natural
                 </p>
             </div>
@@ -159,7 +159,7 @@
                         </g>
                     </svg>
                 </div>
-                <p class="font-montserrat font-medium text-[#a24e4e] text-2xl">incluye un estuche de maquillaje de
+                <p class="font-montserrat font-medium text-[#a24e4e] text-2xl">Incluye un estuche de maquillaje de
                     regalo
                 </p>
             </div>
@@ -178,7 +178,7 @@
                 <div class="absolute inset-0 bg-white/50"></div>
                 <div class="relative z-10 w-full h-full flex flex-col justify-center items-center text-center p-8">
                     <p class="text-[#a24e4e] text-2xl md:text-3xl font-montserrat mb-auto mt-auto">Ser madre me hizo
-                        másfuerte</p>
+                        más fuerte</p>
                     <span class="text-[#a24e4e] text-xl font-bold font-montserrat">Valeria</span>
                 </div>
             </div>
