cambios solicitados por ariana

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <section
-        class="relative w-full h-screen bg-center bg-cover bg-no-repeat bg-black/60 bg-blend-overlay flex flex-col justify-between bg-[url('./assets/hero-bg.jpg')] p-12 md:p-24">
+        class="relative w-full h-screen bg-[center_25%] bg-cover bg-no-repeat bg-[#8345304a] bg-blend-overlay flex flex-col justify-between bg-[url('./assets/hero-2.webp')] p-12 md:p-24">
 
         <!-- Navbar -->
         <div class="w-full p-6 flex justify-center items-center z-10">
@@ -27,7 +27,8 @@
         <!-- Contenido Hero -->
         <div class="flex-1 flex flex-col items-center justify-center text-center text-white z-10 px-4">
             <h2 class="text-6xl md:text-8xl font-bodoni font-light mb-6">Sé tu mejor tú</h2>
-            <h3 class="text-xl md:text-2xl font-eb-garamond italic font-light mb-8">Destaca lo que te hace única</h3>
+            <h3 class="text-1xl md:text-3xl font-eb-garamond italic font-light mb-8">Destaca lo que te hace única con
+                labiales hechos para ti</h3>
             <button
                 class="bg-transparent border-2 border-white text-white py-3 px-8 text-lg md:text-xl font-montserrat font-light hover:bg-white hover:text-black hover:scale-105 active:scale-95 active:bg-white active:text-black transition duration-300 flex items-center gap-2 uppercase">
                 Descubre la colección
@@ -42,17 +43,20 @@
 
     <section
         class="relative w-full min-h-[calc(80vh)] bg-[#e2d5d5] p-12 md:p-24 flex flex-col justify-center items-center gap-8 text-center">
-        <p class="text-[#a24e4e] text-4xl md:text-6xl font-eb-garamond font-normal text-center leading-relaxed">
-            ¿Mides tu belleza con filtros? Es momento de romper estereotipos
+        <p class="text-[#a24e4e] text-4xl md:text-6xl font-eb-garamond font-semibold text-center leading-relaxed">
+            ¿Mides tu belleza con filtros?
         </p>
-        <p class="text-[#a24e4e] text-4xl md:text-6xl font-eb-garamond font-normal text-center leading-relaxed">
+        <p class="text-[#a24e4e] text-2xl md:text-4xl font-eb-garamond font-normal text-center leading-relaxed">
+            Es momento de romper estereotipos
+        </p>
+        <p class="text-[#a24e4e] text-2xl md:text-4xl font-eb-garamond font-normal text-center leading-relaxed">
             Porque tu mejor versión no sigue tendencias, las crea
         </p>
     </section>
 
     <section class="w-full bg-[#fff7f7] py-20 px-8">
         <h3 class="text-[#a24e4e] text-4xl md:text-6xl font-eb-garamond font-normal text-center mb-16 leading-relaxed">
-            10 tonos inspirados en 10 mujeres reales
+            10 labiales inspirados en 10 mujeres reales
         </h3>
 
         <div class="grid grid-cols-1 md:grid-cols-3 gap-8 w-[95%] mx-auto">
@@ -61,8 +65,8 @@
             <div class="relative w-full aspect-[2/3] bg-cover bg-center bg-[url('./assets/tono-1.webp')]">
                 <div class="absolute bottom-8 w-full flex flex-col items-center gap-2">
                     <span class="text-white text-xs uppercase tracking-widest font-montserrat">Tono 01</span>
-                    <span class="text-white text-3xl font-bodoni">Sand</span>
-                    <span class="bg-black text-white text-sm px-4 py-1 font-montserrat">$35.00</span>
+                    <span class="text-white text-3xl font-bodoni">Claudia</span>
+                    <span class="bg-black text-white text-sm px-4 py-1 font-montserrat">$5.00</span>
                 </div>
             </div>
 
@@ -70,8 +74,8 @@
             <div class="relative w-full aspect-[2/3] bg-cover bg-center bg-[url('./assets/tono-2.webp')]">
                 <div class="absolute bottom-8 w-full flex flex-col items-center gap-2">
                     <span class="text-white text-xs uppercase tracking-widest font-montserrat">Tono 02</span>
-                    <span class="text-white text-3xl font-bodoni">Honey</span>
-                    <span class="bg-black text-white text-sm px-4 py-1 font-montserrat">$35.00</span>
+                    <span class="text-white text-3xl font-bodoni">Ariana</span>
+                    <span class="bg-black text-white text-sm px-4 py-1 font-montserrat">$5.00</span>
                 </div>
             </div>
 
@@ -79,8 +83,8 @@
             <div class="relative w-full aspect-[2/3] bg-cover bg-center bg-[url('./assets/tono-3.webp')]">
                 <div class="absolute bottom-8 w-full flex flex-col items-center gap-2">
                     <span class="text-white text-xs uppercase tracking-widest font-montserrat">Tono 03</span>
-                    <span class="text-white text-3xl font-bodoni">Mocha</span>
-                    <span class="bg-black text-white text-sm px-4 py-1 font-montserrat">$35.00</span>
+                    <span class="text-white text-3xl font-bodoni">Maria</span>
+                    <span class="bg-black text-white text-sm px-4 py-1 font-montserrat">5.00</span>
                 </div>
             </div>
 
@@ -168,7 +172,8 @@
     </section>
 
     <section class="w-full bg-[#e2d5d5] py-24 px-8">
-        <h2 class="text-[#a24e4e] text-5xl md:text-7xl font-bodoni text-center mb-16">Las protagonistas</h2>
+        <h2 class="text-[#a24e4e] text-5xl md:text-7xl font-bodoni text-center mb-16">La inspiración de nuestra
+            colección</h2>
 
         <div class="grid grid-cols-1 md:grid-cols-3 gap-8 w-[95%] mx-auto">
 
