agregar $ en maria

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <div class="absolute bottom-8 w-full flex flex-col items-center gap-2">
                     <span class="text-white text-xs uppercase tracking-widest font-montserrat">Tono 03</span>
                     <span class="text-white text-3xl font-bodoni">Maria</span>
-                    <span class="bg-black text-white text-sm px-4 py-1 font-montserrat">5.00</span>
+                    <span class="bg-black text-white text-sm px-4 py-1 font-montserrat">$5.00</span>
                 </div>
             </div>
 
