primera prueba de carrusel

--- a/index.html
+++ b/index.html
@@ -59,10 +59,13 @@
             10 labiales inspirados en 10 mujeres reales
         </h3>
 
-        <div class="grid grid-cols-1 md:grid-cols-3 gap-8 w-[95%] mx-auto">
+        <!-- Carousel Container -->
+        <div
+            class="flex md:grid md:grid-cols-3 gap-8 w-full md:w-[95%] mx-auto overflow-x-auto md:overflow-visible snap-x snap-mandatory px-8 md:px-0 pb-8 md:pb-0 scrollbar-hide">
 
             <!-- Tono 1 -->
-            <div class="relative w-full aspect-[2/3] bg-cover bg-center bg-[url('./assets/tono-1.webp')]">
+            <div
+                class="min-w-[85vw] md:min-w-0 relative w-full aspect-[2/3] bg-cover bg-center bg-[url('./assets/tono-1.webp')] snap-center shrink-0">
                 <div class="absolute bottom-8 w-full flex flex-col items-center gap-2">
                     <span class="text-white text-xs uppercase tracking-widest font-montserrat">Tono 01</span>
                     <span class="text-white text-3xl font-bodoni">Claudia</span>
@@ -71,7 +74,8 @@
             </div>
 
             <!-- Tono 2 -->
-            <div class="relative w-full aspect-[2/3] bg-cover bg-center bg-[url('./assets/tono-2.webp')]">
+            <div
+                class="min-w-[85vw] md:min-w-0 relative w-full aspect-[2/3] bg-cover bg-center bg-[url('./assets/tono-2.webp')] snap-center shrink-0">
                 <div class="absolute bottom-8 w-full flex flex-col items-center gap-2">
                     <span class="text-white text-xs uppercase tracking-widest font-montserrat">Tono 02</span>
                     <span class="text-white text-3xl font-bodoni">Ariana</span>
@@ -80,7 +84,8 @@
             </div>
 
             <!-- Tono 3 -->
-            <div class="relative w-full aspect-[2/3] bg-cover bg-center bg-[url('./assets/tono-3.webp')]">
+            <div
+                class="min-w-[85vw] md:min-w-0 relative w-full aspect-[2/3] bg-cover bg-center bg-[url('./assets/tono-3.webp')] snap-center shrink-0">
                 <div class="absolute bottom-8 w-full flex flex-col items-center gap-2">
                     <span class="text-white text-xs uppercase tracking-widest font-montserrat">Tono 03</span>
                     <span class="text-white text-3xl font-bodoni">Maria</span>
