añadir texto orientativo

--- a/index.html
+++ b/index.html
@@ -94,6 +94,9 @@
             </div>
 
         </div>
+        <h3 class="text-[#a24e4e] text-xs md:hidden font-eb-garamond font-normal text-center mt-16">
+            Desliza para ver más tonos
+        </h3>
     </section>
 
     <section class="w-full bg-white flex flex-col md:flex-row min-h-screen">
