cambiar altura de texto

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             </div>
 
         </div>
-        <h3 class="text-[#a24e4e] text-sm md:hidden font-eb-garamond font-normal text-center mt-4">
+        <h3 class="text-[#a24e4e] text-sm md:hidden font-eb-garamond font-normal text-center">
             Desliza para ver más tonos
         </h3>
     </section>
