añadir un semibold

--- a/index.html
+++ b/index.html
@@ -190,7 +190,8 @@
                 class="relative w-full aspect-square border border-[#a24e4e] bg-cover bg-center bg-[url('./assets/protagonista-1.webp')]">
                 <div class="absolute inset-0 bg-white/60"></div>
                 <div class="relative z-10 w-full h-full flex flex-col justify-center items-center text-center p-8">
-                    <p class="text-[#a24e4e] text-2xl md:text-3xl font-montserrat mb-auto mt-auto">Ser madre me hizo
+                    <p class="text-[#a24e4e] text-2xl md:text-3xl font-montserrat mb-auto mt-auto font-semibold">Ser
+                        madre me hizo
                         más fuerte</p>
                     <span class="text-[#a24e4e] text-xl font-bold font-montserrat">Valeria</span>
                 </div>
@@ -201,7 +202,8 @@
                 class="relative w-full aspect-square border border-[#a24e4e] bg-cover bg-center bg-[url('./assets/protagonista-2.webp')]">
                 <div class="absolute inset-0 bg-white/60"></div>
                 <div class="relative z-10 w-full h-full flex flex-col justify-center items-center text-center p-8">
-                    <p class="text-[#a24e4e] text-2xl md:text-3xl font-montserrat mb-auto mt-auto">La belleza no está en
+                    <p class="text-[#a24e4e] text-2xl md:text-3xl font-montserrat mb-auto mt-auto font-semibold">La
+                        belleza no está en
                         cambiar, sino en aceptarte</p>
                     <span class="text-[#a24e4e] text-xl font-bold font-montserrat">Camila</span>
                 </div>
@@ -212,7 +214,8 @@
                 class="relative w-full aspect-square border border-[#a24e4e] bg-cover bg-center bg-[url('./assets/protagonista-3.webp')]">
                 <div class="absolute inset-0 bg-white/60"></div>
                 <div class="relative z-10 w-full h-full flex flex-col justify-center items-center text-center p-8">
-                    <p class="text-[#a24e4e] text-2xl md:text-3xl font-montserrat mb-auto mt-auto">El éxito se ve
+                    <p class="text-[#a24e4e] text-2xl md:text-3xl font-montserrat mb-auto mt-auto font-semibold">El
+                        éxito se ve
                         diferente para cada una</p>
                     <span class="text-[#a24e4e] text-xl font-bold font-montserrat">Luz</span>
                 </div>
